# discord-adventure-crawler

./: .gitignore  DcCrawler.py  LICENSE  README.md  config.example.json  config.ini  config.json  main.py  pyproject.toml  run.bat
src/: crawler.py  ui.py  utils.py
